[project]
name = "r658it-logger"
version = "0.1.0"
description = "data logging interface for r658it digital multimeter"
authors = [
    {name = "nuenen313",email = "marta.ostrowska@pwr.edu.pl"}
]
requires-python = ">=3.14"
dependencies = [
    "pyvisa (>=1.16.2,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false